# Presentation

./: .gitignore  .gitmodules  Akarin.sln  README.md
Akarin/: Akarin.csproj
Akarin.Interface/: Akarin.Interface.csproj  Interfaces.cs  Vulkan.cs
Native/: CMakeLists.txt
Native/Source/: Application.cpp  Application.h  Config.h  Events.cpp  Events.h  Vulkan.cpp  Vulkan.h  Window.cpp  Window.h
Native/Source/Vulkan/: Application.cpp  DeviceSelector.cpp  Surface.cpp
